# difference-generator

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: lint_and_test.yml
gendiff/: cli.py  formatter.py  gendiff.py  make_diff.py  parser.py
gendiff/formatters/: formatter.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: conftest.py  test_flat_json.py  test_flat_yaml.py  test_generate_diff.py  test_nested_json.py  test_nested_yaml.py  test_plain_format.py  test_plain_json.py  test_plain_yaml.py  test_render_json.py  test_render_json_nested.py  test_render_plain.py  test_render_plain_nested.py  test_render_stylish.py  test_render_stylish_nested.py  test_wrong_file_format.py  test_wrong_format.py
tests/fixtures/: json  json_nested  result_json_format.txt  result_plain_json_json.txt
